Project: fixing alignment, removed body, ul styles

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,19 +7,6 @@ $brand-color: hsl(300, 69%, 71%);
 $bg-color: hsl(257, 40%, 49%);
 $text-color: rgba(255, 255, 255, 0.7);
 
-body {
-	align-items: center;
-	display: flex;
-	font-family: "Open Sans", sans-serif;
-	flex-direction: column;
-	font-size: 0.8rem;
-	justify-content: center;
-	height: 100vh;
-}
-ul {
-	list-style: none;
-}
-
 .main-page {
 	background-color: $bg-color;
 	background-image: url("../images/bg-desktop.svg");
@@ -29,12 +16,7 @@ ul {
 	flex-direction: column;
 	flex-grow: 1;
 	justify-content: space-between;
-	height: 100%;
-	padding: 65px 0;
-	width: 100%;
-	@media (max-width: 769px) {
-		padding: 165px 0;
-	}
+	min-height: 100vh;
 }
 .container {
 	margin: 0 auto;
@@ -79,6 +61,7 @@ ul {
 }
 // *** Main Styles ***
 .header {
+	padding: 30px 0;
 	&__logo {
 		max-width: 200px;
 		img {
@@ -87,12 +70,7 @@ ul {
 			object-fit: cover;
 		}
 	}
-	@media (max-width: 769px) {
-		margin-top: 30px;
-		margin-bottom: 50px;
-	}
 }
-
 .hero {
 	&__row {
 		display: flex;
@@ -173,11 +151,11 @@ ul {
 		}
 	}
 	@media (max-width: 769px) {
-		margin-bottom: 100px;
+		margin-bottom: 50px;
 	}
 }
-
 .footer {
+	padding: 30px 0;
 	&__social-list {
 		justify-content: flex-end;
 		@media (max-width: 769px) {
@@ -187,6 +165,7 @@ ul {
 }
 .social-list {
 	display: flex;
+	list-style: none;
 	&__link {
 		display: block;
 		background-color: transparent;
